Fixed saving multiple layer styles into .kra

BUG:348178